[Bug Fix] Z-index on particles

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -90,7 +90,7 @@ body{
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 0;
+  z-index: -1;
 }
 
 #app{
